--- a/trunk/src/application/configs/application.ini
+++ b/trunk/src/application/configs/application.ini
@@ -12,7 +12,7 @@ autoloaderNamespaces[] = "SvProject"
 
 ; ---
 ; Database
-; --
+; ---
 doctrine.dsn = "mysql://vtorarak_1:E8n64_Sve@localhost/vtorarak_oxy3"
 doctrine.data_fixtures_path = APPLICATION_PATH "/configs/data/fixtures"
 doctrine.sql_path           = APPLICATION_PATH "/configs/data/sql"
@@ -48,7 +48,7 @@ doctrine.dsn = "mysql://root:bntmavtrbg@localhost/svproject"
 
 [development : production]
 ;doctrine.dsn = "mysql://vtorarak_1:E8n64_Sve@localhost/vtorarak_oxy3"
-doctrine.dsn = "mysql://root:bntmavtrbg@localhost/svproject"
+doctrine.dsn = "mysql://wap:qazwsxedc@10.10.32.1/svproject"
 
 doctrine.model_autoloading = 2
 ;doctrine.model_loading = 1
