The Trunk is Stable

--- a/contrib/apache.conf
+++ b/contrib/apache.conf
@@ -1,25 +1,25 @@
 <VirtualHost *:80>
-	ServerName  svproject.vs
-	ServerAlias www.svproject.vs
-	ServerAdmin webmaster@svproject.sv
+	ServerName  wap.fb
+	ServerAlias www.wap.fb
+	ServerAdmin webmaster@wap.fb
 
-	#SetEnv APP_ENV "Ivan.Home"
+	SetEnv APPLICATION_ENV "development"
 	
 	RewriteEngine on
 	RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule !\.(js|ico|gif|jpg|png|css)$ /index.php
 	
-	DocumentRoot /var/www/SvetlioProject/public/
-	<Directory /var/www/SvetlioProject/public/>
+	DocumentRoot /var/www/WebAdvertiseParser/public
+	<Directory /var/www/WebAdvertiseParser/public>
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride None
 		Order allow,deny
 		allow from all
 	</Directory>
 
-	ErrorLog /var/log/apache2/SvetlioProject/error.log
-	CustomLog /var/log/apache2/SvetlioProject/access.log combined
+	ErrorLog /var/log/apache2/WebAdvertiseParser-error.log
+	CustomLog /var/log/apache2/WebAdvertiseParser-access.log combined
 
 	# Possible values include: debug, info, notice, warn, error, crit,
 	# alert, emerg.
