Crop Images and little refactoring

--- a/src/application/configs/application.ini
+++ b/src/application/configs/application.ini
@@ -10,6 +10,8 @@ autoloaderNamespaces[] = "Doctrine"
 autoloaderNamespaces[] = "VS"
 autoloaderNamespaces[] = "SvProject"
 
+picturesPath = "/home/vtorarak/public_html/images/listings"
+
 ; ---
 ; Database
 ; ---
@@ -47,8 +49,9 @@ doctrine.dsn = "mysql://root:bntmavtrbg@localhost/svproject"
 
 
 [development : production]
+picturesPath = "/home/vanko/vtoraraka.bg/images/listings"
 ;doctrine.dsn = "mysql://vtorarak_1:E8n64_Sve@localhost/vtorarak_oxy3"
-doctrine.dsn = "mysql://wap:qazwsxedc@10.10.32.1/svproject"
+doctrine.dsn = "mysql://wap:qazwsxedc@localhost/svproject"
 
 doctrine.model_autoloading = 2
 ;doctrine.model_loading = 1
